--- a/GrpcWebProxy/DockerFile
+++ b/GrpcWebProxy/DockerFile
@@ -1,35 +1,23 @@
-FROM golang:1.9.4-alpine as builder
-LABEL maintainer="esplo@users.noreply.github.com"
+FROM alpine:latest as builder
 
-RUN apk update && apk upgrade && \
-    apk add --no-cache git openssh openssl gettext
+RUN apk update && \
+    apk add wget unzip
 
-RUN GOPATH=~/go ; export GOPATH
-RUN git clone https://github.com/improbable-eng/grpc-web.git $GOPATH/src/github.com/improbable-eng/grpc-web
-RUN cd $GOPATH/src/github.com/improbable-eng/grpc-web
-# after installing dep
-RUN dep ensure 
-# installs into $GOPATH/bin/grpcwebproxy
-RUN go install ./go/grpcwebproxy 
+RUN wget https://github.com/improbable-eng/grpc-web/releases/download/v0.14.0/grpcwebproxy-v0.14.0-linux-x86_64.zip && \
+    unzip grpcwebproxy-v0.14.0-linux-x86_64.zip 
 
-# create certificate
-RUN mkdir -p /tmp/ \
-    && openssl req -new -x509 -sha256 -newkey rsa:2048 -days 365 -nodes -out /tmp/localhost.crt -keyout /tmp/localhost.key -subj "/C=JP/ST=MyState/L=MyLocality/O=MyOrg/OU=dev/CN=localhost"
-
-
-# deploy stage
 FROM alpine:latest
-LABEL maintainer="esplo@users.noreply.github.com"
 
-COPY --from=builder $GOPATH/bin/grpcwebproxy .
-COPY --from=builder /tmp/localhost.crt /tmp/localhost.key ./
+RUN apk update
+
+COPY --from=builder dist/grpcwebproxy-v0.14.0-linux-x86_64 grpcwebproxy
 
 CMD [ \
     "./grpcwebproxy", \
-    "--server_tls_cert_file=./localhost.crt", \
-    "--server_tls_key_file=./localhost.key", \
+    "--backend_tls_noverify", \
+    "./grpcwebproxy", \
     "--use_websockets", \
-    "--allow_all_origins", \
+    "--run_tls_server=false", \
     "--server_http_max_read_timeout=60s", \
     "--backend_addr=beba-grpc-p2gh3d44pq-uc.a.run.app:443" \
 ]
