--- a/GrpcWebProxy/DockerFile
+++ b/GrpcWebProxy/DockerFile
@@ -16,6 +16,7 @@ CMD [ \
     "/grpcwebproxy", \
     "--backend_tls_noverify", \
     "--use_websockets", \
+    "--allow_all_origins", \
     "--run_tls_server=false", \
     "--server_http_max_read_timeout=60s", \
     "--backend_addr=beba-grpc-p2gh3d44pq-uc.a.run.app:443" \
