--- a/GrpcWebProxy/DockerFile
+++ b/GrpcWebProxy/DockerFile
@@ -1,25 +1,3 @@
-FROM alpine:latest as builder
-
-RUN apk update && \
-    apk add wget unzip
-
-RUN wget https://github.com/improbable-eng/grpc-web/releases/download/v0.14.0/grpcwebproxy-v0.14.0-linux-x86_64.zip && \
-    unzip grpcwebproxy-v0.14.0-linux-x86_64.zip 
-
-FROM alpine:latest
-
-RUN apk update
-
-COPY --from=builder dist/grpcwebproxy-v0.14.0-linux-x86_64 grpcwebproxy
-
-CMD [ \
-    "/grpcwebproxy", \
-    "--backend_tls_noverify", \
-    "--use_websockets", \
-    "--backend_tls=true", \
-    "--allow_all_origins", \
-    "--run_tls_server=false", \
-    "--server_http_tls_port=8080", \
-    "--server_http_max_read_timeout=60s", \
-    "--backend_addr=beba-grpc-p2gh3d44pq-uc.a.run.app:443" \
-]
+FROM envoyproxy/envoy-alpine:v1.17.0
+COPY envoy.yaml /etc/envoy/envoy.yaml
+RUN apk --no-cache add ca-certificates
