--- a/GrpcWebProxy/envoy.yaml
+++ b/GrpcWebProxy/envoy.yaml
@@ -1,3 +1,7 @@
+admin:
+  address:
+    socket_address: { address: 0.0.0.0, port_value: 8081 }
+
 static_resources:
   listeners:
   - name: listener_0
